Fixed thebug where the PlaylistContent is semi-hidden by the header when window size is reduced.

--- a/client/src/css/profile.css
+++ b/client/src/css/profile.css
@@ -86,11 +86,13 @@
 
 .playlist-content-container-hide-scrollbar {
   position: absolute;
+  margin-top: 25%;
   bottom: 0;
   right: 0;
   background-color: rgba(196, 0, 0, 0.205);
   width: 75%;
   height: 75%;
+  max-height: calc(100% - 190px);
   overflow: hidden;
   z-index: 0;
 }
